<resources>
    <string name="app_name">Photo Of The Day - Nat Geo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_rate">Rate the App</string>
    <string name="skip_to_date">Skip To Date</string>
    <string name="skip_to_top">Skip To Top</string>
    <string name="action_save">Save in SD Card</string>
    <string name="action_view_in_gallery">View in Gallery</string>
    <string name="action_image_share">Share</string>
    <string name="action_set_wallpaper">Set as Wallpaper</string>
    <string name="about">About</string>
    <string name="font_family">sans-serif-thin</string>
    <integer name="loading_duration">50</integer>
    <string name="title_activity_main1">Main1Activity</string>
    <string name="settings">Settings</string>

</resources>
