<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".FullScreen">

    <item
        android:id="@+id/image_share"
        android:title="@string/action_image_share"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/save_image"
        android:title="@string/action_save"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_as_wallpaper"
        android:title="@string/action_set_wallpaper"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_in_gallery"
        android:title="@string/action_view_in_gallery"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_app"
        android:title="@string/action_rate"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>