<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Home">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_app"
        android:title="@string/action_rate"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <!--item
        android:id="@+id/action_skip_to_date"
        android:title="@string/skip_to_date"
        android:orderInCategory="3"
        app:showAsAction="never" /-->
    <item
        android:id="@+id/action_skip_to_top"
        android:title="@string/skip_to_top"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="4"
        app:showAsAction="never" />

</menu>
